--- a/home.html
+++ b/home.html
@@ -7,10 +7,15 @@
         <link rel="stylesheet" href="style.css">
         </head>
         <body>
-          <header class="header">
-              <h1>EarthMold</h1>
-                  <p>Crafting Sustainable Futures</p>
-                    </header>
+          <header class="header" style="display: flex; align-items: center; justify-content: space-between; padding: 20px;">
+                <div style="flex: 1;">
+                      <h1 style="font-size: 2.8rem; color: #4b2c20; margin: 0;">EarthMold</h1>
+                            <p style="color: #665a4e; font-size: 1.3rem;">Crafting Sustainable Futures</p>
+                                </div>
+                                    <div style="flex: 1; text-align: right;">
+                                          <img src="img/title.png" alt="Company Image" style="max-width: 200px; height: auto; border-radius: 10px;margin-right: 20px;">
+                                              </div>
+                                                </header>
 
                       <section class="banner">
                           <h2>Your Partner in Sustainable Packaging Solutions</h2>
