--- a/index.html
+++ b/index.html
@@ -1,84 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>EarthMold - Sustainable Packaging Solutions</title>
-        <link rel="stylesheet" href="style.css">
-        </head>
-        <body>
-          <header class="header" style="display: flex; align-items: center; justify-content: space-between; padding: 20px;">
-                <div style="flex: 1;">
-                      <h1 style="font-size: 2.8rem; color: #4b2c20; margin: 0;">EarthMold</h1>
-                            <p style="color: #665a4e; font-size: 1.3rem;">Crafting Sustainable Futures</p>
-                                </div>
-                                    <div style="flex: 1; text-align: right;">
-                                          <img src="img/title.png" alt="Company Image" style="max-width: 200px; height: auto; border-radius: 10px;margin-right: 20px;">
-                                              </div>
-                                                </header>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>EarthMold - Sustainable Packaging Solutions</title>
+  <link rel="stylesheet" href="style.css">
+</head>
 
-                      <section class="banner">
-                          <h2>Your Partner in Sustainable Packaging Solutions</h2>
-                              <p>At EarthMold, we revolutionize the packaging industry with innovative, eco-friendly pulp solutions. Every product is designed to protect, preserve, and sustain.</p>
-                                  <a href="about.html" class="btn">Discover More</a>
-                                    </section>
+<body>
+  <header class="header" style="display: flex; align-items: center; justify-content: space-between; padding: 20px;">
+    <div style="flex: 1;">
+      <h1 style="font-size: 2.8rem; color: #4b2c20; margin: 0;">EarthMold</h1>
+      <p style="color: #665a4e; font-size: 1.3rem;">Crafting Sustainable Futures</p>
+    </div>
+    <div style="flex: 1; text-align: right;">
+      <img src="img/title2.PNG" alt="Company Image"
+        style="max-width: 200px; height: auto; border-radius: 10px;margin-right: 20px;">
+    </div>
+  </header>
 
-                                      <section class="offer">
-                                          <h2>What We Offer</h2>
-                                              <p>EarthMold specializes in creating 100% biodegradable, recyclable, and compostable packaging solutions tailored for industries such as electronics, home appliances, and more. Our solutions replace environmentally harmful plastics and polystyrenes, helping businesses achieve their sustainability goals.</p>
-                                                  <p>Our innovative team works with you from concept design to final production, ensuring quality and precision at every step of the way.</p>
-                                                    </section>
+  <section class="banner">
+    <h2>Your Partner in Sustainable Packaging Solutions</h2>
+    <p>At EarthMold, we revolutionize the packaging industry with innovative, eco-friendly pulp solutions. Every product
+      is designed to protect, preserve, and sustain.</p>
+    <a href="about.html" class="btn">Discover More</a>
+  </section>
 
-                                                      <section class="products">
-                                                          <h2>Products Tailored for Every Industry</h2>
-                                                              <div class="product">
-                                                                    <div class="product-text">
-                                                                            <h3>Electronics</h3>
-                                                                                    <p>Our durable and eco-friendly pulp packaging ensures safe transit and protection for fragile electronic devices. Designed with precision, these solutions reduce environmental impact while offering exceptional reliability.</p>
-                                                                                          </div>
-                                                                                                <div class="product-image">
-                                                                                                        <img src="img/electronics.jpg" alt="Electronics Packaging">
-                                                                                                              </div>
-                                                                                                                  </div>
-                                                                                                                      <div class="product reverse">
-                                                                                                                            <div class="product-text">
-                                                                                                                                    <h3>Home Appliances</h3>
-                                                                                                                                            <p>EarthMold provides robust pulp solutions for home appliances, offering perfect cushioning and protection during shipping. Sustainable, versatile, and reliable – our packaging is a game-changer for household items.</p>
-                                                                                                                                                  </div>
-                                                                                                                                                        <div class="product-image">
-                                                                                                                                                                <img src="img/home.png" alt="Home Appliances Packaging">
-                                                                                                                                                                      </div>
-                                                                                                                                                                          </div>
-                                                                                                                                                                            </section>
+  <section class="offer">
+    <h2>What We Offer</h2>
+    <p>EarthMold specializes in creating 100% biodegradable, recyclable, and compostable packaging solutions tailored
+      for industries such as electronics, home appliances, and more. Our solutions replace environmentally harmful
+      plastics and polystyrenes, helping businesses achieve their sustainability goals.</p>
+    <p>Our innovative team works with you from concept design to final production, ensuring quality and precision at
+      every step of the way.</p>
+  </section>
 
-                                                                                                                                                                              <section class="founder">
-                                                                                                                                                                                  <h2>Meet Our Founder</h2>
-                                                                                                                                                                                      <p>EarthMold was founded by <strong>Tanuja Dhamdre</strong>, an entrepreneur with a vision to combat plastic pollution through sustainable packaging alternatives. With a focus on innovation and eco-consciousness, she has steered EarthMold toward becoming a leader in the pulp packaging industry.</p>
-                                                                                                                                                                                          <blockquote>"Our mission is to create a sustainable tomorrow by eliminating single-use plastics. Every product we design contributes to a cleaner, greener future."</blockquote>
-                                                                                                                                                                                              <p>— Tanuja Dhamdre, Founder</p>
-                                                                                                                                                                                                </section>
+  <section class="products">
+    <h2>Products Tailored for Every Industry</h2>
+    <div class="product">
+      <div class="product-text">
+        <h3>Electronics</h3>
+        <p>Our durable and eco-friendly pulp packaging ensures safe transit and protection for fragile electronic
+          devices. Designed with precision, these solutions reduce environmental impact while offering exceptional
+          reliability.</p>
+      </div>
+      <div class="product-image">
+        <img src="img/electronics.jpg" alt="Electronics Packaging">
+      </div>
+    </div>
+    <div class="product reverse">
+      <div class="product-text">
+        <h3>Home Appliances</h3>
+        <p>EarthMold provides robust pulp solutions for home appliances, offering perfect cushioning and protection
+          during shipping. Sustainable, versatile, and reliable – our packaging is a game-changer for household items.
+        </p>
+      </div>
+      <div class="product-image">
+        <img src="img/home.png" alt="Home Appliances Packaging">
+      </div>
+    </div>
+  </section>
 
-                                                                                                                                                                                                  <section class="why-us">
-                                                                                                                                                                                                      <h2>Why Choose EarthMold?</h2>
-                                                                                                                                                                                                          <p>EarthMold is committed to excellence and sustainability. Here’s why businesses trust us:</p>
-                                                                                                                                                                                                              <ul>
-                                                                                                                                                                                                                    <li><strong>Eco-Friendly:</strong> 100% biodegradable, recyclable, and compostable products that help preserve the planet.</li>
-                                                                                                                                                                                                                          <li><strong>Custom Solutions:</strong> Tailored packaging solutions for diverse industries to meet unique needs.</li>
-                                                                                                                                                                                                                                <li><strong>Certified Quality:</strong> ISO 9001 certified processes ensuring precision and high standards.</li>
-                                                                                                                                                                                                                                      <li><strong>Innovation:</strong> A dedicated R&D team driving groundbreaking solutions for a sustainable future.</li>
-                                                                                                                                                                                                                                          </ul>
-                                                                                                                                                                                                                                              <a href="products.html" class="btn">Explore Our Products</a>
-                                                                                                                                                                                                                                                </section>
+  <section class="founder">
+    <h2>Meet Our Founder</h2>
+    <p>EarthMold was founded by <strong>Tanuja Dhamdre</strong>, an entrepreneur with a vision to combat plastic
+      pollution through sustainable packaging alternatives. With a focus on innovation and eco-consciousness, she has
+      steered EarthMold toward becoming a leader in the pulp packaging industry.</p>
+    <blockquote>"Our mission is to create a sustainable tomorrow by eliminating single-use plastics. Every product we
+      design contributes to a cleaner, greener future."</blockquote>
+    <p>— Tanuja Dhamdre, Founder</p>
+  </section>
 
-                                                                                                                                                                                                                                                  <footer class="footer">
-                                                                                                                                                                                                                                                      <h3>Contact Us</h3>
-                                                                                                                                                                                                                                                          <p>Email: sales@earthmold.com</p>
-                                                                                                                                                                                                                                                              <p>Phone: +44 1236 829 052</p>
-                                                                                                                                                                                                                                                                  <div class="social-links">
-                                                                                                                                                                                                                                                                        <a href="#">Facebook</a>
-                                                                                                                                                                                                                                                                              <a href="#">Twitter</a>
-                                                                                                                                                                                                                                                                                    <a href="#">LinkedIn</a>
-                                                                                                                                                                                                                                                                                        </div>
-                                                                                                                                                                                                                                                                                          </footer>
-                                                                                                                                                                                                                                                                                          </body>
-                                                                                                                                                                                                                                                                                          </html>
+  <section class="why-us">
+    <h2>Why Choose EarthMold?</h2>
+    <p>EarthMold is committed to excellence and sustainability. Here’s why businesses trust us:</p>
+    <ul>
+      <li><strong>Eco-Friendly:</strong> 100% biodegradable, recyclable, and compostable products that help preserve the
+        planet.</li>
+      <li><strong>Custom Solutions:</strong> Tailored packaging solutions for diverse industries to meet unique needs.
+      </li>
+      <li><strong>Certified Quality:</strong> ISO 9001 certified processes ensuring precision and high standards.</li>
+      <li><strong>Innovation:</strong> A dedicated R&D team driving groundbreaking solutions for a sustainable future.
+      </li>
+    </ul>
+    <a href="products.html" class="btn">Explore Our Products</a>
+  </section>
+
+  <footer class="footer">
+    <h3>Contact Us</h3>
+    <p>Email: sales@earthmold.com</p>
+    <p>Phone: +44 1236 829 052</p>
+    <div class="social-links">
+      <a href="#">Facebook</a>
+      <a href="#">Twitter</a>
+      <a href="#">LinkedIn</a>
+    </div>
+  </footer>
+</body>
+
+</html>
